# 2024G-RT

./: LICENSE  README.md
.github/workflows/: cargo.yml
Games101/: Cargo.toml
Games101/src/: main.rs  rasterizer1.rs  rasterizer2.rs  rasterizer3.rs  report.txt  shader.rs  task1.rs  task2.rs  task3.rs  texture.rs  triangle.rs  utils.rs
RayTracer/: Cargo.toml  log.txt
RayTracer/output/: Material.ppm  Refraction.ppm  bubble.ppm  convert_from_ppm_to_png.py  defocus_blur.ppm  diffuse_color.ppm  distant_view.ppm  lambertian_diffuse.ppm  lambertian_diffuse_gamma_correction.ppm  metal_fuzz.ppm  refraction.ppm  test.ppm  total_internal_refraction.ppm  two_ball.ppm  two_ball_multisample.ppm  wide-angle-camera.ppm  zooming_in.ppm
RayTracer/output/book2/: Bouncing_spheres.ppm
RayTracer/output/ganyu/: MiConv.com__甘雨.obj:Zone.Identifier
RayTracer/src/: Report.txt  color.rs  main.rs  material.rs  perlin.rs  plane.rs  quad.rs  sup.rs  texture.rs  util.rs  vec3.rs
RayTracer/support/ganyu/: AnyConv.com__甘雨.obj:Zone.Identifier  MiConv.com__甘雨.obj:Zone.Identifier
