[package]
name = "RayTracer"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
image = "0.24.2"
indicatif = "0.16.2" # progress bar
rand = "0.8.4"
lazy_static = "1.4.0"
rayon = "1.5.1"
crossbeam = "0.8.1"
obj = "0.10"
